update result view

--- a/app/views/trakkers/_track.html.erb
+++ b/app/views/trakkers/_track.html.erb
@@ -23,9 +23,9 @@
                     <div class="tracking_no">
                       <label for="AWB">Tracking Number</label>
                       <div class="text_area">
-                        <textarea id="AWB" rows="3" cols="40" name="AWB">Enter your tracking number</textarea>
+                        <textarea id="AWB" rows="3" cols="40" name="AWB" placeholder="Enter your tracking number"></textarea>
                       </div>
-                      <input type="submit" value="Track" style="color: #fff; background: #cc0001; padding: 2px; float: right">
+                      <input type="submit" value=">>" style="cursor:hand;color: #fff; background: #cc0001; padding: 2px; float: right">
                     </div>
 
                   </fieldset>
